--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -20,25 +20,6 @@
             android:layout_centerVertical="true"
             android:src="@drawable/ic_robbery"/>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@id/event_icon"
-            android:layout_marginTop="-15dp"
-            android:background="@drawable/rounded_edges">
-
-            <TextView
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:id="@+id/event_votes"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:text="99+" />
-
-        </LinearLayout>
-
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -53,32 +34,75 @@
         android:layout_height="wrap_content"
         android:layout_weight="4">
 
-        <TextView
-            android:id="@+id/event_type"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:id="@+id/first_row"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_margin="8dp"
-            android:text="ROBBERY"
-            android:textAppearance="?attr/textAppearanceListItem" />
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:id="@+id/event_votes_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center"
+                android:layout_margin="8dp"
+                android:background="@drawable/rounded_edges">
+
+                <TextView
+                    android:id="@+id/event_votes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:text="99+"
+                    android:textColor="@color/white" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/event_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerVertical="true"
+                android:layout_margin="8dp"
+                android:layout_toRightOf="@id/event_votes_layout"
+                android:text="ROBBERY"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:textAppearance="?attr/textAppearanceListItem" />
+
+            <TextView
+                android:id="@+id/event_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_centerVertical="true"
+                android:layout_margin="8dp"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:text="12/05/2017" />
+
+        </RelativeLayout>
+
 
         <TextView
             android:id="@+id/event_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/event_type"
+            android:layout_below="@id/first_row"
             android:layout_margin="8dp"
             android:text="Via Roma, Guanzate"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:textAppearance="?attr/textAppearanceListItem" />
 
-        <TextView
-            android:id="@+id/event_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:layout_margin="8dp"
-            android:text="12/05/2017" />
 
         <View
             android:layout_width="match_parent"
