--- a/app/src/main/res/layout/fragment_subscription.xml
+++ b/app/src/main/res/layout/fragment_subscription.xml
@@ -6,39 +6,21 @@
     android:weightSum="5">
 
     <RelativeLayout
-        android:orientation="vertical"
         android:layout_width="0dp"
         android:layout_height="fill_parent"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="vertical">
 
 
         <ImageView
             android:id="@+id/sub_icon"
-            android:layout_margin="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/ic_robbery"/>
+            android:layout_margin="8dp"
+            android:src="@drawable/ic_robbery" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@id/sub_icon"
-            android:layout_marginTop="-15dp"
-            android:background="@drawable/rounded_edges">
-
-            <TextView
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:id="@+id/sub_radius"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:text="1000m" />
-
-        </LinearLayout>
 
         <View
             android:layout_width="match_parent"
@@ -54,22 +36,54 @@
         android:layout_height="wrap_content"
         android:layout_weight="4">
 
-        <TextView
-            android:id="@+id/sub_city"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:id="@+id/first_row"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_margin="8dp"
-            android:text="Guanzate"
-            android:textAppearance="?attr/textAppearanceListItem" />
+            >
+
+            <TextView
+                android:id="@+id/sub_city"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_margin="8dp"
+                android:text="Guanzate"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:textAppearance="?attr/textAppearanceListItem" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/rounded_edges">
+
+                <TextView
+                    android:id="@+id/sub_radius"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:text="1000m"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:textColor="@color/white" />
+
+            </LinearLayout>
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/sub_street"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/sub_city"
+            android:layout_below="@id/first_row"
             android:layout_margin="8dp"
             android:text="Via Roma"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:textAppearance="?attr/textAppearanceListItem" />
 
         <View
